// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`harus bisa merender ExpensesSummary dengan data 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`harus bisa merender ExpensesSummary dengan data multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $235,123,409.87
  </h1>
</div>
`;
